18-cka-cks-kubernetes/manifests/cks/netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cks-lab
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
